# ore-mal-pkg-inspector

./: .cursorrules  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  logging_config.py  malicious_package_scanner.py  package.json  pyproject.toml  requirements.txt  scanner_engine.py  test-malicious-package.json
.cursor/rules/: orewatch-dependency-checks.mdc
.github/workflows/: publish-pypi.yml
collectors/: README.md  __init__.py  build_unified_index.py  collect_openssf.py  collect_osv.py  collect_phylum.py  collect_socketdev.py  config.yaml  db.py  live_update.py  orchestrator.py  requirements.txt  run_all.sh  utils.py
docs/: adoption-guide.md  demo-recording.md  deployment-guide.md  e2e-testing.md  local-api.md  managed-rollout.md  prd-multi-ecosystem-e2e-project.md  roadmap.md
monitor/: __init__.py  api.py  cli.py  config.py  ide_bootstrap.py  integration_matrix.py  mcp_adapter.py  menubar.py  notifier.py  policy.py  scheduler.py  service.py  snapshot_updater.py  state.py  watcher.py
monitor/assets/: __init__.py
scanners/: __init__.py  affected_packages.yaml  dependency_parsers.py  ecosystem_detector.py  file_input_parser.py  ioc_detector.py  malicious_checker.py  report_generator.py  supported_files.py
scripts/: __init__.py  orewatch_client.py  run_e2e_matrix.py  setup_e2e_workspace.py
scripts/demo/: record_screen_demo.sh  record_terminal_demo.sh  run_orewatch_demo.sh
tests/: test_client_e2e.py  test_e2e_compromised_detection.py  test_malicious_package.json  test_manifest_fixtures.py  test_monitor.py  test_orewatch_client.py  test_packaging.py  test_regressions.py
tests/fixtures/manifests/: Cargo.toml  Gemfile  Pipfile  build.gradle  go.mod  go.sum  package-lock.json  package.json  pnpm-lock.yaml  pom.xml  pyproject.toml  requirements.txt  setup.py
